feat: 커리어 기록 카테고리 이동 추가
